<resources>
    <string name="app_name">Eyezen</string>

    <!-- Onboarding Screen Texts -->
    <string name="onboarding_title">See Clearly,</string>
    <string name="onboarding_subtitle">Live Vibrantly</string>
    <string name="get_started_button">Get Started</string>
    <string name="signinbuttonn">Sign In</string>
    <string name="signupbutton">Sign Up</string>
    <string name="terms_text">I agree to the healthcare <font color='#1E88E5'><u>Terms of Service</u></font> and <font color='#1E88E5'><u>Privacy Policy</u></font></string>
    <string name="signupheadrer">Sign Up</string>
    <string name="eneterurEmail">Enter your email</string>
    <string name="enterurpassword">Enter your password</string>
    <string name="forgetpassword">Forgot password?</string>
    <string name="signinwithgmail">SIGN IN WITH GOOGLE</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="Enter_your_email_here_to_receive_the_reset_link">Enter your email here to receive the reset link</string>
</resources>